ros2_study/log/build_2025-11-12_12-19-16/my_first_package/stderr.log
  File "/home/hyh/ros2_study/install/my_first_package/lib/python3.10/site-packages/my_first_package/dist_turtle_action_server.py", line 15
    	def __init__(selfm ac_server):
    	                   ^^^^^^^^^
SyntaxError: invalid syntax

